force-app/main/default/objects/Contact/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שותף</label>
    <referenceTo>Affiliate__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>