force-app/main/default/objects/Contact/fields/Attended_Dreamforce__c.field-meta.xml
<CustomField>
    <fullName>Attended_Dreamforce__c</fullName>
    <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;
CASE( Dreamforce__c, 
&quot;yes&quot;, &quot;Image ID&quot;, 
&quot;No&quot;, &quot;Image ID&quot;
, &quot;&quot;),&quot;Image Not Available...&quot;,18,18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attended Dreamforce</label>
    <type>Text</type>
</CustomField>