force-app/main/default/objects/Contact/fields/Dreamforce__c.field-meta.xml
<CustomField>
    <fullName>Dreamforce__c</fullName>
    <label>Dreamforce</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>