force-app/main/default/objects/Contact/fields/TIMBASURVEYS__Survey__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>